force-app/main/default/objects/Applicant__c/fields/Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Number__c</fullName>
    <label>Applicant Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Applicant</fullName>
            </value>
            <value>
                <fullName>Second Applicant</fullName>
            </value>
            <value>
                <fullName>Third Applicant</fullName>
            </value>
            <value>
                <fullName>Fourth Applicant</fullName>
            </value>
            <value>
                <fullName>Fifth Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>