force-app/main/default/objects/Applicant__c/fields/Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Title__c</fullName>
    <label>Applicant Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>