force-app/main/default/objects/Applicant__c/fields/Corresponding_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Street_Address__c</fullName>
    <label>Corresponding Street Address</label>
    <type>TextArea</type>
</CustomField>