force-app/main/default/objects/Applicant__c/fields/Document_Upload_Required__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_Required__c</fullName>
    <label>Document Upload Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>