force-app/main/default/objects/Applicant__c/fields/Local_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_Name__c</fullName>
    <label>Local Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>