force-app/main/default/objects/Applicant__c/fields/Local_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_Number__c</fullName>
    <label>Local Contact Number</label>
    <type>Phone</type>
</CustomField>