force-app/main/default/objects/Applicant__c/fields/Mailing_Address_Same_as_PermanentAddress__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Same_as_PermanentAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address Same as PermanentAddress</label>
    <type>Checkbox</type>
</CustomField>