force-app/main/default/objects/Applicant__c/fields/Mailing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Pincode__c</fullName>
    <label>Mailing Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>