force-app/main/default/objects/Applicant__c/fields/Permanent_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Pin_Code__c</fullName>
    <label>Permanent Pin Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>