force-app/main/default/objects/Applicant__c/fields/Relation_with_Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Relation_with_Primary_Applicant__c</fullName>
    <label>Relation with Primary Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relations</valueSetName>
    </valueSet>
</CustomField>